# DRKEngine

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/DRKEngine/: CMakeLists.txt  DRKEngine.h  filesystem.cpp  filesystem.h  render_loop.cpp  render_loop.h  shader.cpp  shader.h  window.cpp  window.h
src/DRKEngine/objects/: primitives.cpp  primitives.h
src/testgame/: CMakeLists.txt  main.cpp
